fixing shoppingcart.html overflow

--- a/catstyle.css
+++ b/catstyle.css
@@ -1869,6 +1869,7 @@ body {
     border-bottom: 1px solid #ccc;
     padding: 20px 0;
     gap: 12px;
+    overflow: hidden;
   }
 
   .item-info {
